# medulla

./: .gitignore  CMakeLists.txt  README.md
cafana/: CMakeLists.txt  example.cc
cafana/include/: analysis.h  cuts.h  framework.h  particle_cuts.h  particle_variables.h  spinevar.h  test.h  variables.h
cafana/include/electron2025/: cuts_electron2025.h  utilities_electron2025.h  variables_electron2025.h
cafana/include/muon2024/: cuts_muon2024.h  variables_muon2024.h
cafana/macros/icarus/: electron2025.C
cafana/src/: framework.cc  main.cc  test.cc  validate.cc
cafana/test/: test.toml
cmake/: CheckEnvironment.cmake  SetupEnvironment.cmake
gundam/: to_gundam.C
selection/: CMakeLists.txt
selection/include/: cuts.h  event_cuts.h  event_variables.h  framework.h  mctruth.h  particle_cuts.h  particle_utilities.h  particle_variables.h  scorers.h  selectors.h  spill.h  spill_cuts.h  test.h  utilities.h  variables.h
selection/include/muon2024/: variables_muon2024.h
selection/include/pi0ana/: cuts_ccpi0ana.h  cuts_ncpi0ana.h  cuts_pi0ana.h  utilities_ccpi0ana.h  utilities_ncpi0ana.h  utilities_pi0ana.h  variables_ccpi0ana.h  variables_ncpi0ana.h  variables_pi0ana.h
selection/src/: framework.cc  main.cc  test.cc  validate.cc
selection/test/: test.toml
selection/toml/: ccpi0ana_icarus.toml  energy_calib.toml  example.toml  icarus_disappearance.toml  michel.toml  ncpi0ana_icarus.toml  particles.toml  sbn_disappearance.toml
shared/: CMakeLists.txt
shared/include/: configuration.h
shared/src/: configuration.cc
spineplot/: analysis.py  confusion.py  efficiency.py  figure.py  pur_eff_analyzer.py  requirements.txt  roc.py  sample.py  spectra.py  spectra1d.py  spectra2d.py  systematic.py  utilities.py  variable.py
spineplot/configurations/analyses/icarus/: ccpi0ana_categorytopologyv1_onbeam_mc_offbeam.toml  ccpi0ana_datamc_syst.toml  efficiency_electron2025.toml  electron2025_icarus.toml  muon_pandora_icarus.toml  ncpi0ana_categorytopologyv1_onbeam_mc_offbeam.toml
spineplot/configurations/common/: samples.toml  styles.toml
spineplot/configurations/electron2025/: variables_eff.toml
spineplot/configurations/muon_pandora/: variables.toml
spineplot/styles/: pi0ana.mplstyle
systematics/: CMakeLists.txt
systematics/configurations/: pi0ana_sel.toml
systematics/include/: detsys.h  systematic.h  trees.h  trees_gundam.h  utilities.h  weight_reader.h
systematics/src/: detsys.cc  main.cc  systematic.cc  to_gundam.cc  trees.cc  weight_reader.cc
systematics/toml/: icarus_disappearance.toml  pi0ana_sel.toml  pi0ana_sig.toml
tutorial/: tutorial.md
